# VLXI-Cookiecutter-Julia

./: NEWS.md  README.md  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.sh  pre_gen_project.sh
{{cookiecutter.__package_name}}/: LICENSE-BSL  LICENSE-BSL-1.1  Makefile
{{cookiecutter.__package_name}}/extras/: dot-envrc
{{cookiecutter.__package_name}}/extras/references/: Julia-Packaging-Guide.md
