[tool.poetry]
name = "Velexi Julia Package Cookiecutter"
version = "0.5.6"
description = "Template for Julia packages"
license = "Apache-2.0"
authors = ["Kevin Chu <kevin@velexi.com>"]

[tool.poetry.dependencies]
python = "^3.10"
cookiecutter = "^2"
pre-commit = "^3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
